--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,10 @@ body {
     @apply w-full rounded-full bg-blue-500 hover:bg-blue-600 hover:shadow-lg transition-all duration-100 p-2 text-white text-center;
 }
 
+a.inline {
+    @apply text-blue-500 hover:underline;
+}
+
 h1 {
     @apply font-display text-3xl font-bold;
 }
